Fixed overflows in admin site

--- a/media/css/sct.css
+++ b/media/css/sct.css
@@ -280,3 +280,7 @@ li li {
 #container {
     background-color: white;
 }
+
+#changelist {
+    overflow: auto;
+}
